# rust-web-app

./: .gitignore  Cargo.toml  articles.csv  articles.txt  bacon.toml  export.csv  output.md  package-lock.json  rustfmt.toml  rustfmt.toml.bak
crates/libs/lib-active-campaign/: Cargo.toml
crates/libs/lib-active-campaign/src/: contacts.rs  lib.rs
crates/libs/lib-anythingllm/: Cargo.toml  README.md
crates/libs/lib-anythingllm/docs/: AdminApi.md  AuthenticationApi.md  DocumentsApi.md  EmbedApi.md  InvalidApiKey.md  OpenAiCompatibleEndpointsApi.md  SystemSettingsApi.md  UserManagementApi.md  V1SystemRemoveDocumentsDeleteRequest.md  WorkspaceThreadsApi.md  WorkspacesApi.md
crates/libs/lib-anythingllm/src/: lib.rs
crates/libs/lib-anythingllm/src/apis/: admin_api.rs  authentication_api.rs  configuration.rs  documents_api.rs  embed_api.rs  mod.rs  open_ai_compatible_endpoints_api.rs  system_settings_api.rs  user_management_api.rs  workspace_threads_api.rs  workspaces_api.rs
crates/libs/lib-anythingllm/src/models/: _v1_system_remove_documents_delete_request.rs  chat_response.rs  file_items.rs  invalid_api_key.rs  mod.rs  response.rs
crates/libs/lib-automation/: Cargo.toml  build.rs
crates/libs/lib-automation/src/: config.rs  error.rs  lib.rs  on_docx_upload.rs  on_ebook_file_upload.rs  on_file_upload.rs  prelude.rs  routes.rs
crates/libs/lib-automation/src/anythingllm/: document.rs  mod.rs  response.rs
crates/libs/lib-automation/src/directus/: mod.rs  trigger.rs
crates/libs/lib-automation/src/openai/: chat.rs  mod.rs
crates/libs/lib-automation/src/substack/: config.rs  conversions.rs  drafts.rs  error.rs  export.rs  mod.rs  prose_mirror.rs
crates/libs/lib-coolify/: Cargo.toml  README.md
crates/libs/lib-coolify/docs/: Application.md  ApplicationDeploymentQueue.md  ApplicationsApi.md  CreateDatabaseClickhouseRequest.md  CreateDatabaseDragonflyRequest.md  CreateDatabaseKeydbRequest.md  CreateDatabaseMariadbRequest.md  CreateDatabaseMongodbRequest.md  CreateDatabaseMysqlRequest.md  CreateDatabasePostgresqlRequest.md  CreateDatabaseRedisRequest.md  CreateDockercomposeApplicationRequest.md  CreateDockerfileApplicationRequest.md  CreateDockerimageApplicationRequest.md  CreateEnvByApplicationUuid201Response.md  CreateEnvByApplicationUuidRequest.md  CreatePrivateDeployKeyApplicationRequest.md  CreatePrivateGithubAppApplicationRequest.md  CreatePrivateKeyRequest.md  CreateProject201Response.md  CreateProjectRequest.md  CreatePublicApplicationRequest.md  CreateServer201Response.md  CreateServerRequest.md  CreateService201Response.md  CreateServiceRequest.md  DatabasesApi.md  DefaultApi.md  DeleteApplicationByUuid200Response.md  DeleteDatabaseByUuid200Response.md  DeleteEnvByApplicationUuid200Response.md  DeletePrivateKeyByUuid200Response.md  DeleteProjectByUuid200Response.md  DeleteServerByUuid200Response.md  DeleteServiceByUuid200Response.md  DeployByTagOrUuid200Response.md  DeployByTagOrUuid200ResponseDeploymentsInner.md  DeploymentsApi.md  DisableApi200Response.md  DisableApi403Response.md  (+44 more)
crates/libs/lib-coolify/src/apis/: applications_api.rs  mod.rs  (+10 more)
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  lib.rs  prelude.rs
crates/libs/lib-debug-deserialize/: Cargo.toml  README.md
crates/libs/lib-debug-deserialize/src/: debug_deserialize.rs
crates/libs/lib-directus/: Cargo.toml  README.md
crates/libs/lib-directus/docs/: AcceptInviteRequest.md  Activity.md  ActivityApi.md  ActivityCollection.md  ActivityIp.md  ActivityRevisionsInner.md  ActivityUser.md  AssetsApi.md  AuthenticationApi.md  Collections.md  CollectionsApi.md  CollectionsGroup.md  Comments.md  CommentsApi.md  CommentsCollection.md  CommentsUserCreated.md  CommentsUserUpdated.md  CreateCollection200Response.md  CreateCollectionRequest.md  CreateComment200Response.md  CreateCommentRequest.md  CreateContentVersion200Response.md  CreateField200Response.md  CreateFieldRequest.md  CreateFieldRequestMeta.md  CreateFieldRequestSchema.md  CreateFile200Response.md  CreateFileRequest.md  CreateFlow200Response.md  CreateFolder200Response.md  CreateFolderRequest.md  CreateItemsArticles200Response.md  CreateItemsArticlesDirectusUsers200Response.md  CreateItemsArticlesDirectusUsersRequest.md  CreateItemsArticlesRequest.md  CreateItemsArticlesTags200Response.md  CreateItemsArticlesTagsRequest.md  CreateItemsArticlesTranslations200Response.md  CreateItemsArticlesTranslationsRequest.md  CreateItemsEbooks200Response.md  (+244 more)
crates/libs/lib-directus/src/: client.rs  ebook.rs  lib.rs
crates/libs/lib-sdk/: Cargo.toml
crates/libs/lib-sdk/src/: base_service.rs  client.rs  config.rs  error.rs  http_client.rs  lib.rs  macros.rs  prelude.rs  resource.rs  resource_service.rs  simple_client.rs  token_client.rs
crates/libs/lib-stirling-pdf/: Cargo.toml  README.md
crates/libs/lib-stirling-pdf/docs/: ConvertApi.md  FilterApi.md  GeneralApi.md  HandleDataRequest.md  InfoApi.md  MiscApi.md  PipelineApi.md  SecurityApi.md
crates/libs/lib-stirling-pdf/src/: lib.rs
crates/libs/lib-substack/: Cargo.toml
crates/libs/lib-substack/src/: config.rs  conversions.rs  endnote_converter.rs  error.rs  export.rs  image.rs  lib.rs  prelude.rs  prose_mirror.rs  structs.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: b64.rs  debug_deserialize.rs  envs.rs  js_macro.rs  lib.rs  retry.rs
crates/libs/lib-web/: Cargo.toml
crates/libs/lib-web/src/: error.rs  lib.rs  log.rs
crates/libs/ryde/: Cargo.toml
crates/libs/ryde/src/: lib.rs  router.rs
crates/services/token-service/: Cargo.toml  Dockerfile
crates/services/token-service/src/: main.rs  token.rs
crates/services/web-server/: Cargo.toml  Dockerfile
crates/services/web-server/examples/: quick_dev.rs
crates/services/web-server/src/: config.rs  error.rs  log.rs  main.rs
crates/sites/site_1/: Cargo.toml
crates/sites/site_1/src/: error.rs  lib.rs  prelude.rs
crates/sites/tos/: Cargo.toml
crates/sites/tos/src/: component.rs  lib.rs
crates/tools/posts-to-articles/: Cargo.toml
crates/tools/posts-to-articles/src/: issues.json  main.rs
(+958 files in other folders)
