[package]
name = "lib-active-campaign"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
lib-utils = { path = "../lib-utils"}
url = { workspace = true }
time = { workspace = true }
serde-json-debugging = { path = "../serde-json-debugging" }

[lints]
workspace = true
