[package]
name = "lib-anythingllm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
serde-json-debugging = { path = "../serde-json-debugging"}

[lints]
workspace = true
