[package]
name = "lib-anythingllm"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
json = { workspace = true }
serde_repr = "^0.1"
url = "2.5"
async-trait = "^0.1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
bon = { version = "*", optional = true }

[features]
bon = ["dep:bon"]

[package.metadata.cargo-machete]
ignored = ["bon"]
