[package]
name = "lib-automation"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-utils = { path = "../lib-utils" }
lib-anythingllm = { path = "../lib-anythingllm" }
lib-core = { path = "../lib-core" }
lib-substack = { path = "../lib-substack" }

tokio = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
ormlite = { workspace = true }
uuid = { workspace = true }
axum = "*"

[lints]
workspace = true
