[package]
name = "lib-automation"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-utils = { path = "../lib-utils" }
lib-anythingllm = { path = "../lib-anythingllm" }
lib-core = { path = "../lib-core" }
lib-substack = { path = "../lib-substack" }

tokio = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
json = { workspace = true }
derive_more = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
sqlx = { workspace = true }
url = { workspace = true }
ormlite = { workspace = true }
uuid = { workspace = true }
axum = "*"
encoding_rs = "0.8"
htmd = "0.1"
regex = "1"
if_chain = "1"
tracing = "0.1"

[lints]
workspace = true
