[package]
name = "lib-automation"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-utils = { path = "../lib-utils" }
lib-anythingllm = { path = "../lib-anythingllm" }
lib-core = { path = "../lib-core" }
lib-substack = { path = "../lib-substack" }

tokio = { workspace = true }
time = { workspace = true }

serde = { workspace = true }
serde_with = { workspace = true }
json = { workspace = true }
derive_more = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
sqlx = { workspace = true }
ormlite = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
axum = "*"
urlencoding = "2"
regex = "1.11.1"
futures = "0.3"
sha2 = "0.10"
async-openai = "0.27"
async-recursion = "1"
statum = { path = "/home/eran/code/statum/statum", features = ["serde"] }

[build-dependencies]
barexp = "1"

[lints]
workspace = true
