[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[lints]
workspace = true

[features]

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils" }
lib-auth = { path = "../../libs/lib-auth" }
# -- Async
tokio = { workspace = true }
serde = { workspace = true }
json = { workspace = true }
serde_with = { workspace = true }
# -- Data
sqlx = { workspace = true }
tracing = "0.1"
# -- Others
time = { workspace = true }
derive_more = { workspace = true }
reqwest = { workspace = true }
ormlite = { workspace = true }
uuid = { workspace = true }
mime = "0.3"
partially = { version = "0.2", features = ["derive"] }

[dev-dependencies]
serial_test = "3"
