[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[lints]
workspace = true

[features]

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils" }
lib-auth = { path = "../../libs/lib-auth" }
# lib-substack = { path = "../../libs/lib-substack" }

# -- Async
tokio = { workspace = true }
serde = { workspace = true }
json = { workspace = true }
serde_with = { workspace = true }
url = { workspace = true }
serde_urlencoded = { workspace = true }
# -- Data
sqlx = { workspace = true }
tracing = "0.1"
# -- Others
time = { workspace = true }
derive_more = { workspace = true }
reqwest = { workspace = true }
ormlite = { workspace = true }

uuid = { workspace = true }
partially = { version = "0.2", features = ["derive"] }
moddef = { workspace = true }

[dev-dependencies]
serial_test = "3"
