[package]
name = "lib-directus"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-sdk = { path = "../lib-sdk" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde-json-debugging = { path = "../serde-json-debugging"}
async-trait = "0.1"

[lints]
workspace = true
