[package]
name = "openapi"
version = "11.2.2"
authors = ["OpenAPI Generator team and contributors"]
description = "This is a dynamically generated API specification for all endpoints existing on the current project."
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
async-trait = "^0.1"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
bon = { version = "2.3", optional = true }
[features]
bon = ["dep:bon"]
