[package]
name = "lib-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-utils = { path = "../lib-utils" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
url_serde = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
derive_more = { workspace = true }
serde_urlencoded = { workspace = true }
async-trait = "0.1"
tokio-retry = "0.3"
log ="0.4"


[lints]
workspace = true
