[package]
name = "lib-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
serde_with = { workspace = true }
derive_more = { workspace = true }
serde_urlencoded = { workspace = true }
async-trait = "0.1"
log ="0.4"


[lints]
workspace = true
