[package]
name = "lib-substack"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-core = { path = "../lib-core" }
serde = { workspace = true }
json = { workspace = true }
serde_with = { workspace = true }
derive_more = { workspace = true }
ormlite = { workspace = true }
regex = "1"
encoding_rs = "0.8"
htmd = "0.1"
reqwest = { workspace = true }

[lints]
workspace = true
