[package]
name = "lib-web"
version = "0.1.0"
edition = "2024"

[dependencies]
# use lib_auth::{pwd, token};
lib-core = { path = "../lib-core" }
lib-utils = { path = "../lib-utils" }
derive_more = { workspace = true }
serde = { workspace = true }
json = { workspace = true }
serde_with = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }

tracing = { version = "0.1", features = ["log"] }
axum = { version = "0.7", features = ["macros"] }

[lints]
workspace = true
