[package]
name = "ryde"
version = "0.4.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/swlkr/ryde"
repository = "https://github.com/swlkr/ryde"
keywords = ["ryde", "web", "ssr", "framework", "hypermedia"]
description = "a single person, single file web framework"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header", "multipart"] }
itoa = "1.0"
http-body-util = "0.1"
ryde_macros = { path = "ryde_macros", version = "0.2.0" }
ryu = "1.0"
seq-macro = "0.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tower = { version = "0.4", features = ["util"] }
time = "0.3.36"
reqwest = "0.12"
