[package]
name = "token-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio-cron-scheduler = "0.10"
redis = { version = "0.25", features = ["tokio-comp"] }
bb8-redis = "0.15"

[lints]
workspace = true
