[package]
name = "token-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio-cron-scheduler = "0.13"
redis = { version = "0.27", features = ["tokio-comp"] }
bb8-redis = "0.17"

[lints]
workspace = true
