[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils" }
lib-auth = { path = "../../libs/lib-auth" }
lib-core = { path = "../../libs/lib-core" }
lib-automation = { path = "../../libs/lib-automation" }
lib-web = { path = "../../libs/lib-web" }
# -- Async
tokio = { workspace = true }
serde = { workspace = true }
json = { workspace = true }
serde_with = { workspace = true }
derive_more = { workspace = true }

axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower-cookies = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Others

# -- Sites
site_1 = { path = "../../sites/site_1/" }

[dev-dependencies]
httpc-test = "0.1"
