[package]
name = "site_1"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-core = { path = "../../libs/lib-core" }
lib-utils = { path = "../../libs/lib-utils" }
lib-directus = { path = "../../libs/lib-directus" }
js_macro = { path = "../../libs/js_macro" }
derive_more = { workspace = true }
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie", "typed-header", "multipart"] }
serde = { workspace = true }
tokio = { workspace = true }
tower = "0.5"
time = "0.3.36"
serde_json = {workspace = true}
reqwest = "0.12"
maud = { version = "0.26.0", features = ["axum"] }

tower-http = { version = "0.6", features = ["fs", "cors"] }
ormlite = { version = "0.22", features = [ "postgres", "json", "time", "uuid" ] }
uuid = { workspace = true }


[lints]
workspace = true

