[package]
name = "site_1"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-core = { path = "../../libs/lib-core" }
js_macro = { path = "../../libs/js_macro" }
derive_more = { workspace = true }
axum = "0.7"
serde = { workspace = true }
serde_json = {workspace = true}
reqwest = "0.12"
maud = { version = "0.26.0", features = ["axum"] }

tower-http = { version = "0.6", features = ["cors", "fs"] }
ormlite = { workspace = true }
uuid = { workspace = true }

convert_case = "0.6"


[lints]
workspace = true

