[package]
name = "site_1"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-core = { path = "../../libs/lib-core" }
js_macro = { path = "../../libs/js_macro" }
derive_more = { workspace = true }
serde = { workspace = true }
json = { workspace = true }
reqwest = { workspace = true }
ormlite = { workspace = true }
uuid = { workspace = true }

axum = "0.7"
maud = { version = "0.26.0", features = ["axum"] }

tower-http = { version = "0.6", features = ["cors", "fs"] }

convert_case = "0.6"


[lints]
workspace = true
