[package]
name = "tos"
version = "0.1.0"
edition = "2021"

[dependencies]
shtml = { git = "https://github.com/swlkr/shtml", version = "0.2.0" }
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie", "typed-header", "multipart"] }
serde = { workspace = true }
tokio = { workspace = true }
tower = "0.5"
time = "0.3.36"
ryde = { path = "../../libs/ryde" }

[lints]
workspace = true
