[package]
name = "posts-to-articles"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
ormlite = { workspace = true }
lib-core = { path = "../../libs/lib-core" }
lib-automation = { path = "../../libs/lib-automation" }
tokio = { workspace = true }
htmd = "0.1"
regex = "1"
tracing-subscriber = { workspace = true }
async-recursion = "1"
json = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
sqlmo = "0.22"

[lints]
workspace = true
